# ai-news-aggregator

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/config/: settings.yaml
app/db/: create_tables.py  crud.py  db.py  delete_records.py  models.py
app/scraper/: base.py  openai_blog_scraper.py  orchestrator.py  scraper_config.py  youtube_transcript_scraper.py
deploy/: README.md
docker/: README.md  docker-compose.yml
