[project]

name = "ai-news-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"feedparser",
	"sqlalchemy",
	"openai",
	"yagmail",
	"apscheduler",
	"pydantic",
	"python-dotenv",
	"click",
	"pytest",
	"pytest-cov",
	"ruff",
	"youtube-transcript-api>=1.2.3",
	"psycopg2-binary",
	"alembic",
]

[project.optional-dependencies]
dev = [
	"ruff",
	"pytest",
	"pytest-cov"
]
